[package]
name = "enforcer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.31.1"
blake3 = "1.5.0"
clap = { version = "4.4.16", features = ["derive"] }
confy = "0.6.0"
dirs = "5.0.1"
hex = "0.4.3"
miette = { version = "5.10.0", features = ["fancy"] }
prost = "0.12.3"
serde = "1.0.195"
sha2 = "0.10.8"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.8"
tonic = "0.10.2"
ureq-jsonrpc = { git = "https://github.com/nchashch/ureq-jsonrpc" }

[build-dependencies]
tonic-build = "0.10.2"
